Issue #2060283: Photo Gallery : Overlay not themed Issue #2060291: Photo Gallery: Portrait images are not centered Issue #2028391: Photo gallery: layout issue with the block column display

--- a/modules/ofed_photogallery/assets/styles/ofed_photogallery.css
+++ b/modules/ofed_photogallery/assets/styles/ofed_photogallery.css
@@ -5,22 +5,29 @@
 }
 .view-mode-block_element .field-name-field-ofed-photog-images,
 .block-list .field-name-field-ofed-photog-images,
-.block-info  .field-name-field-ofed-photog-images,
+.block-info .field-name-field-ofed-photog-images,
 .view-mode-teaser .field-name-field-ofed-photog-images,
-.view-mode-block_column  .field-name-field-ofed-photog-images{
+.view-mode-block_column .field-name-field-ofed-photog-images {
   padding: 10px 0;
 }
-
 .page-list .field-name-field-ofed-photog-images {
   margin: 10px auto 0 auto;
   width:400px;
 }
-
+.field-name-field-ofed-photog-images .field-slideshow-slide {
+  width: 100% !important;
+  position: relative !important;
+}
+.field-name-field-ofed-photog-images a {
+  width: 100%;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
 .block-info .field-name-field-ofed-photog-images {
   margin: 10px auto 0 auto;
   width: 200px;
 }
-
 /*
     PHOTO GALLERY
 */
@@ -45,38 +52,38 @@
   left:25%;
 }*/
 .view-mode-full .field-slideshow-slide {
+  margin: 0 auto;
   padding: 20px 0;
+  text-align: center;
+  width: 100% !important;
 }
 .field-slideshow-caption {
-    background: rgba(0, 152, 178, 0.65) url(../images/bg-caption.png) repeat-x left top;
-    padding: 5px 10px;
-    margin-top: -30px;
-    z-index: 10000;
-    position: relative;
-    color: #fff;
+  background: rgba(0, 152, 178, 0.65) url(../images/bg-caption.png) repeat-x left top;
+  padding: 5px 10px;
+  margin-top: -30px;
+  z-index: 10000;
+  position: relative;
+  color: #fff;
 }
-
 #maincontent ul.field-slideshow-pager li {
   background: none;
   padding: 0 2px 0 0;
 }
-
 /*     PAGER  de photo-gallery     */
 
 .view-mode-teaser .field-slideshow-controls,
 .block-list .field-slideshow-controls,
 .view-mode-block_element .field-slideshow-controls,
 .view-mode-block_column .field-slideshow-controls,
-.page-list  .field-slideshow-controls {
+.page-list .field-slideshow-controls {
   position:relative;
 }
-
 .view-mode-teaser .field-slideshow-controls a,
 .block-list .field-slideshow-controls a,
 .view-mode-block_element .field-slideshow-controls a,
 .view-mode-block_column .field-slideshow-controls a,
 .view-mode-block_list .field-slideshow-controls a,
-.page-list  .field-slideshow-controls a {
+.page-list .field-slideshow-controls a {
   display:inline-block;
   width: 29px;
   height: 19px;
@@ -86,23 +93,21 @@
   line-height:0;
   text-shadow:0;
 }
-
+.view-mode-block_column .field-slideshow-controls a {
+  top: 5px;
+}
 .view-mode-page_list .field-slideshow-controls a {
   top: -20px;
 }
-
 .view-mode-page_list .field-slideshow-controls .prev {
   left: -25px;
 }
-
 .field-slideshow-controls .prev {
   background: url(../images/arrow-carrousel-left.png) no-repeat 0px 0px;
 }
-
 .field-slideshow-controls .prev:hover {
   background: url(../images/arrow-carrousel-left-active.png) no-repeat 0px 0px;
 }
-
 .view-mode-page_list .field-slideshow-controls .next {
   right: -45px;
 }
@@ -113,7 +118,6 @@
 .field-slideshow-controls .next:hover {
   background: url(../images/arrow-carrousel-right-active.png) no-repeat 0px 0px;
 }
-
 .view-ofed-photogallery .more-link,
 .field-name-node-link {
   font-size: 0.85em;
@@ -130,16 +134,21 @@
 .view-ofed-photogallery .page-list .field-name-node-link {
   padding-top: 10px;
 }
-
 /*    PAGER de photo-gallery en full node     */
 
-.view-mode-full .field-slideshow-controls {
+.view-mode-full .field-slideshow-controls,
+.page-list .field-slideshow-controls {
   width: 460px;
   height: 190px;
   margin: -190px auto 0 auto;
+  z-index: 10000;
+  position: relative;
 }
-
-.view-mode-full .field-slideshow-controls a {
+.page-list .field-slideshow-controls {
+  margin: -150px auto 0 auto;
+}
+.view-mode-full .field-slideshow-controls a,
+.page-list .field-slideshow-controls a {
   text-indent:-2000em; /* Masquer le texte et le remplancer par des icones de flèches*/
   display: inline-block;
   width: 26px;
@@ -149,35 +158,46 @@
   line-height:0;
   text-shadow:0;
 }
-.view-mode-full .field-slideshow-controls .prev {
+.view-mode-full .field-slideshow-controls .prev,
+.page-list .field-slideshow-controls .prev {
   background: url(../images/arrow-slideshow-left.png) no-repeat 0px 0px;
 }
 .ie7 .view-mode-full .field-slideshow-controls .prev,
-.ie8 .view-mode-full .field-slideshow-controls .prev {
+.ie8 .view-mode-full .field-slideshow-controls .prev,
+.ie7 .page-list .field-slideshow-controls .prev,
+.ie8 .page-list .field-slideshow-controls .prev {
   float: left;
 }
-.view-mode-full .field-slideshow-controls .prev:hover {
+.view-mode-full .field-slideshow-controls .prev:hover,
+.page-list .field-slideshow-controls .prev:hover {
   background: url(../images/arrow-slideshow-left-active.png) no-repeat 0px 0px;
 }
-.view-mode-full .field-slideshow-controls .next {
+.view-mode-full .field-slideshow-controls .next,
+.page-list .field-slideshow-controls .next {
   float: right;
   background: url(../images/arrow-slideshow-right.png) no-repeat 0px 15px;
-  right:auto;
+  right: auto;
 }
-.ie7 .view-mode-full .field-slideshow-controls .next {
+.page-list .field-slideshow-controls .next {
+  float: none;
+  right: 6%;
+}
+.page-list .field-slideshow-controls .prev {
+  left: -35px;
+  top: 0px
+}
+.ie7 .view-mode-full .field-slideshow-controls .next,
+.ie7 .page-list .field-slideshow-controls .prev {
   margin-top:-60px;
 }
-
-.view-mode-full .field-slideshow-controls .next:hover {
+.view-mode-full .field-slideshow-controls .next:hover,
+.page-list .field-slideshow-controls .next:hover {
   background: url(../images/arrow-slideshow-right-active.png) no-repeat 0px 15px;
 }
-
 #maincontent ul.field-slideshow-pager {
   min-height: 50px;
   zoom: 1;
 }
-
-
 /*     Carrousel contenant la liste des thumbnails     */
 #maincontent ul.field-slideshow-pager:before,
 #maincontent ul.field-slideshow-pager:after { /* Clearfix pour remettre à la ligne la liste des thumbnails */
@@ -186,7 +206,6 @@
   line-height: 0;
   clear: both;
 }
-
 .field-slideshow-carousel-wrapper {
   /*background: #F4F4F3 url(../images/bg-separator-bottom.png) center top no-repeat;*/
   padding: 0 0 20px 0;
@@ -194,13 +213,12 @@
   margin: auto;
 }
 .field-slideshow-carousel {
-
 }
 .view-mode-teaser .field-slideshow-carousel-wrapper > a,
 .block-list .field-slideshow-carousel-wrapper > a,
 .view-mode-block_element .field-slideshow-carousel-wrapper > a,
 .view-mode-block_column .field-slideshow-carousel-wrapper > a,
-.view-mode-block_list .field-slideshow-carousel-wrapper > a{
+.view-mode-block_list .field-slideshow-carousel-wrapper > a {
   text-indent:-2000em;
   display:inline-block;
   width: 20px;
@@ -235,8 +253,12 @@
   background: url(../images/arrow-carrousel-right-active.png) no-repeat 3px 0px;
 }
 .view-ofed-photogallery .more-link {
-  padding: 0 12px 12px 0;
   text-align: right;
+  position: absolute;
+  top: 15px;
+  right: 0;
+  padding: 0;
+  margin:0;
 }
 .view-ofed-photogallery .field-name-node-link {
   text-align:center;
@@ -269,10 +291,10 @@
 }
 .view-display-id-ofed_photogallery_block_column {
   zoom: 1;
+  margin-bottom: 40px;
 }
-
-@media   handheld,                      /* Only Opera Mobile is compliant for the moment*/
-    only screen and (max-device-width:767px),      /* Only for smartphone screen */
+@media handheld, /* Only Opera Mobile is compliant for the moment*/
+    only screen and (max-device-width:767px), /* Only for smartphone screen */
     only screen and (max-width:767px) {
   .view-display-id-ofed_photogallery_block_column .views-row {
     display: block;
